css/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
html, body {
    margin-top: 20px;
    width: 100%;
    height: 100%;
}
body {
    font-family: Arial, sans-serif;
    background-color: #f4f4f4;
    color: #333;
    margin-top: 30px;
    display: flex;
    flex-direction: column;
    align-items: center;
}
.grading-system {
    display: flex;
    align-items: center;
    gap: 20px;
    margin: 30px 0;
}
.grading-system input[type="radio"] {
    display: none;
}

.grading-system label {
    padding: 10px 20px;
    border-radius: 5px;
    background-color: #eee;
    cursor: pointer;
    margin: 5px;
    transition: 0.3s;
}

.grading-system label:hover {
    background-color: #ddd;
}

.grading-system input[type="radio"]:checked + label {
    background-color: #007BFF;
    color: white;
}
.subjects-container {
    width: 80%;
}
.subject {
    background-color: #fff;
    padding: 20px;
    margin: 20px 0;
    border-radius: 5px;
    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
    width: 100%;
    display: flex;
    justify-content: space-around;
    gap: 50px;
    align-items: center;
}
.subject p {
    font-size: 18px;
    font-weight: bold;
}
.input-group {
    padding: 20px;
}
.input-group h3 {
    text-align: center;
}
.input-group input, .input-group select {
    width: 100%;
    height: 50px;
    font-size: 20px;
    font-weight: bold;

    text-align: center;
    appearance: none;
    -webkit-appearance: none;
    -moz-appearance: none;

    text-align: center;
    text-align-last: center;

    padding: 10px;
    margin-top: 10px;
    border: 1px solid #ccc;
    border-radius: 5px;
}
.input-group input:focus, .input-group select:focus {
    border-color: #007BFF;
    outline: none;
}
.action-btns {
    display: flex;
    justify-content: center;
    gap: 20px;
    margin-top: 50px;
    margin-bottom: 100px;
    width: 80%;
}
.action-btns button {
    padding: 10px 20px;
    border: none;
    border-radius: 5px;
    cursor: pointer;
    height: 50px;
    font-size: 20px;
    font-weight: bold;
}
#add-btn {
    width: 10%;
}
#show-btn {
    width: 60%;
}
#delete-btn {
    width: 10%;
}
#add-btn {
    background-color: #28a745;
    color: #fff;
}
#add-btn:hover {
    background-color: #218838;
}
#show-btn {
    background-color: #007bff;
    color: #fff;
}
#show-btn:hover {
    background-color: #0069d9;
}
#delete-btn {
    background-color: #dc3545;
    color: #fff;
}
#delete-btn:hover {
    background-color: #c82333;
}
#add-btn img, #delete-btn img {
    width: 30px;
    height: 30px;
}

.result {
    background-color: #fff;
    padding: 20px;
    border-radius: 5px;
    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
    width: 30%;
    text-align: center;
    font-size: 30px;
    font-weight: bold;
    margin-bottom: 30px;
}

footer {
    text-align: center;
    padding: 20px;
    background-color: #007BFF;
    color: #fff;
    width: 100%;
    height: 100%;
}

